@@ -1,3 +1,7 @@
+Sat Aug 25 20:18:13 2001  George Lebl <jirka@5z.com>
+
+	* gnome-druid-page-standard.c:  Fix bad prototype
+
 Sat Aug 25 00:33:51 2001  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-druid-page-standard.c
